      supported, otherwise to the C++98 standard.

      \item The list of compilers searched for \samp{F95} has been
      modernized, and that chosen for \samp{FC} will be used as the
      default.  in particular, \command{gfortran} is now the first
      choice, not \command{f95}.  Set \samp{FC} in \file{config.site} to
      override this if necessary.
    }
  }
  
  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item The interpretation of source code with extension \file{.f}
      is changing.  Previously this denoted FORTRAN 77 code, but current
      compilers no longer have a FORTRAN 77 mode and interpret it as
      \sQuote{fixed-form} Fortran 90 (or later where supported) code.
      Extensions \file{.f90} and \file{.f95} continue to indicate
      \sQuote{free-form} Fortran code.

      Legal FORTRAN 77 code is also legal fixed-form Fortran 95; however
      this change legitimizes the use of later features, in particular
      to replace features marked \sQuote{obsolescent} in Fortran 95
      which compilers have started to warn about.

      \item New macros \samp{CXX_VISIBILITY} and \samp{FC_VISIBILITY}
      analogous to \samp{C_VISIBILITY} and \samp{F77_VISIBILITY}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now optionally checks makefiles for
      correct and portable use of the \samp{SHLIB_OPENMP_*FLAGS} macros.

      \item \command{R CMD check} now evaluates \code{\\Sexpr{}}
      expressions (including those in macros) before checking the
      contents of \file{Rd} files and so detects issues both in
      evaluating the expressions and in the expanded contents.

      \item \command{R CMD check} now lists missing packages separated
      by commas and with regular quotes such as to be useful as argument
      in calling \code{install.packages(c(..))}; from a suggestion by
      Marcel Ramos.

      \item \code{tools::Rd2latex()} now uses UTF-8 as its default
      output encoding.
    }